--- a/BoardInterface/Base.lproj/Main.storyboard
+++ b/BoardInterface/Base.lproj/Main.storyboard
@@ -682,7 +682,7 @@
         <scene sceneID="hIz-AP-VOD">
             <objects>
                 <viewController id="XfG-lQ-9wD" sceneMemberID="viewController">
-                    <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl" customClass="GridView">
+                    <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl" customClass="SlidersStackView">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </view>
